fixed height of signature canvas on mobile width

--- a/src/components/SignatureCanvas/SignatureCanvas.css
+++ b/src/components/SignatureCanvas/SignatureCanvas.css
@@ -39,3 +39,8 @@
   }
 }
 
+@media screen and ( max-width: 680px){
+  .signature-canvas {
+    height: 300px;
+  }
+}
